[package]
name = "vxbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
shuttle-serenity = "0.36.0"
shuttle-runtime = "0.36.0"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.36.0"
shuttle-shared-db = { version = "0.36.0", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.35.1"
tracing = "0.1.40"
regex = "1.10.2"
